src/styles/AccountInfo.scss
@import "./Constants.scss";

.AccountInfo{
  display: inline-block;
  height: 100%;
  display: flex;

  &__balance{
    text-align: left;
    font-family: 'Roboto';
    display: flex;
    flex-direction: column;
    margin-top: 25px;
  }

  &__balance-header{
    font-size: 14px;
    margin: 0;
  }

  &__balance--is-loading{
    margin: 0 auto;
  }

  &__balance-info{
    font-size: 14px;
    display: flex;
    align-items: center;

    & svg:nth-child(3){
      margin-left: 5px;
    }

    & span{
      margin: 0px 5px;
    }
  }

  &__balance-myb{
    padding-right: 10px;
  }

  &__address{
    float: left;
    margin-top: 25px;
  }

}

